# bite-sized-bazel

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  maven_install.json  requirements.in  requirements_lock.txt  tags.bzl
aspects/: BUILD  factors.bzl  print_factors.bzl
collector/: BUILD  my_file.md
doc_hub/: BUILD  aspects.bzl  babashka.bzl  clojure.bzl  copy.clj  macros.bzl  providers.bzl  rules.bzl
greeter/: BUILD  Hello.java  HelloJson.java  hello.clj  hello.py  hello_clojure.clj  hello_clojure_json.clj  hello_json.clj  hellojson.py
hello_world/: BUILD  hello_world.md
hello_world/inner_world/: BUILD  a_file.md  another_file.md
libraries/stdlib/: BUILD
libraries/stdlib/clojure/: BUILD  strings.clj  strings_test.clj
libraries/stdlib/java/: BUILD  Strings.java  StringsTest.java
libraries/stdlib/python/: BUILD  strings.py  strings_test.py
macros/: BUILD  basic_build_unfactored.gv  graphviz.bzl
numbers/: BUILD
providers/: BUILD  factor-info.bzl  number-info.bzl
rules/: BUILD  factors_file.bzl  greeter.bzl  greeting.json.tpl  hello.bzl  hello_temp.bzl  json_greeter.bzl  noop.bzl  print.bzl  print_factors.bzl  product.bzl
toolchains/babashka/: BUILD  bb_binary.bzl  bb_genrule.bzl  bb_test.bzl  bb_toolchain.bzl  example_test.clj  hello.clj  pwd.clj  reader.clj
toolchains/clojure/: BUILD  clojure_binary.bzl  clojure_library.bzl  clojure_test.bzl  clojure_toolchain.bzl  example_test.clj  pwd.clj
toolchains/clojure/impl/: BUILD  library.clj  test.clj
visualizations/src/: aspects_graph.gv  build_tools_graph_unfactored.gv  clojure_json_dependencies_unfactored.gv  clojure_json_dependencies_unfactored_no_tool_deps.gv  clojure_toolchain_graph.gv  custom_rules_graph_unfactored.gv  default_rules_graph_unfactored.gv  external_dependencies_unfactored.gv  factors.gv  factors_refactored.gv  filegroup_deps.gv  filegroup_deps_unfactored.graph  java_json_dependencies_no_tools_unfactored.gv  java_json_dependencies_unfactored.gv  java_test_deps_unfactored.gv  macros_graph.gv  macros_graph_unfactored.gv  numbers_subgraph.gv  platforms_graph.gv  python_json_dependencies_no_tools_unfactored.gv  python_json_dependencies_unfactored.gv  python_test_deps_unfactored.gv  source_tree_graph.gv  stardoc_graph.gv  toolchain_graph.gv  unfactored_basic_test_targets.gv
